--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -1,21 +1,21 @@
 
-    <footer className="mt-auto w-full">
+    <footer class="mt-auto w-full">
         
-      <div className="container mx-auto px-4 py-10 text-white">
+      <div class="container mx-auto px-4 py-10 text-white">
         
-        <div className="grid grid-cols-1 md:grid-cols-4 gap-8 text-center md:text-left">
+        <div class="grid grid-cols-1 md:grid-cols-4 gap-8 text-center md:text-left">
 
           <div>
-            <h5 className="text-yellow-400 font-bold text-lg">🕹️ GamingStore</h5>
+            <h5 class="text-yellow-400 font-bold text-lg">🕹️ GamingStore</h5>
             <p class="">nose mano pero esto esta raro</p>
-            <p className="text-sm mt-3">
+            <p class="text-sm mt-3">
               Tu tienda gamer de confianza. Encuentra laptops, componentes y accesorios al mejor precio.
             </p>
           </div>
 
           <div>
-            <h5 className="text-yellow-400 font-bold text-lg">Enlaces rápidos</h5>
-            <ul className="mt-3 space-y-2">
+            <h5 class="text-yellow-400 font-bold text-lg">Enlaces rápidos</h5>
+            <ul class="mt-3 space-y-2">
               <li><a href="#">Inicio</a></li>
               <li><a href="#">Catálogo</a></li>
               <li><a href="#">Carrito</a></li>
@@ -24,8 +24,8 @@
           </div>
 
           <div>
-            <h5 className="text-yellow-400 font-bold text-lg">Ayuda</h5>
-            <ul className="mt-3 space-y-2">
+            <h5 class="text-yellow-400 font-bold text-lg">Ayuda</h5>
+            <ul class="mt-3 space-y-2">
               <li><a href="#">Preguntas frecuentes</a></li>
               <li><a href="#">Términos y condiciones</a></li>
               <li><a href="#">Política de privacidad</a></li>
@@ -33,18 +33,18 @@
           </div>
 
           <div>
-            <h5 className="text-yellow-400 font-bold text-lg">Síguenos</h5>
-            <div className="flex justify-center md:justify-start space-x-4 mt-3 text-xl">
-              <a href="#" title="Facebook"><i className="bi bi-facebook"></i></a>
-              <a href="#" title="Instagram"><i className="bi bi-instagram"></i></a>
-              <a href="#" title="Twitter"><i className="bi bi-twitter-x"></i></a>
-              <a href="#" title="YouTube"><i className="bi bi-youtube"></i></a>
+            <h5 class="text-yellow-400 font-bold text-lg">Síguenos</h5>
+            <div class="flex justify-center md:justify-start space-x-4 mt-3 text-xl">
+              <a href="#" title="Facebook"><i class="bi bi-facebook"></i></a>
+              <a href="#" title="Instagram"><i class="bi bi-instagram"></i></a>
+              <a href="#" title="Twitter"><i class="bi bi-twitter-x"></i></a>
+              <a href="#" title="YouTube"><i class="bi bi-youtube"></i></a>
             </div>
           </div>
 
         </div>
 
-        <div className="text-center border-t border-white/20 mt-10 pt-5 text-gray-300 text-sm">
+        <div class="text-center border-t border-white/20 mt-10 pt-5 text-gray-300 text-sm">
           © 2025 GamingStore. Todos los derechos reservados.
         </div>
       </div>
