--- a/src/app/paginas/carrito/carrito.component.html
+++ b/src/app/paginas/carrito/carrito.component.html
@@ -1,1 +1,111 @@
-<p>carrito works!</p>
+<nav><app-navbar></app-navbar></nav>
+<main>
+  <div class="container py-4">
+    <h4 class="fw-bold mb-3 blanco">Mi carrito <span class="blanco">(3 productos)</span></h4>
+
+    <div class="row">
+      <!-- Lista de productos -->
+      <div class="col-lg-8">
+        <!-- Producto -->
+        <div class="card mb-3 card-producto p-3 d-flex flex-row align-items-center justify-content-between">
+          <div class="d-flex align-items-center">
+            <img src="/img/telefono.jpeg" class="me-3" alt="Producto">
+            <div>
+              <h6 class="fw-bold mb-1">Celular Motorola Edge 50 Fusion</h6>
+              <p class="mb-0 text-muted">8GB RAM, 256GB, 50MP + 13MP, 32MP frontal</p>
+              <a href="#" class="text-danger small">Eliminar</a>
+            </div>
+          </div>
+          <div class="text-end">
+            <div class="d-flex align-items-center justify-content-end mb-2">
+              <button class="btn btn-outline-secondary btn-sm">−</button>
+              <span class="mx-2">1</span>
+              <button class="btn btn-outline-secondary btn-sm">+</button>
+            </div>
+            <p class="fw-bold mb-0 text-success">S/ 1,049.00</p>
+          </div>
+        </div>
+        
+         <div class="card mb-3 card-producto p-3 d-flex flex-row align-items-center justify-content-between">
+          <div class="d-flex align-items-center">
+            <img src="/img/mouse.jpg" class="me-3" alt="Producto">
+            <div>
+              <h6 class="fw-bold mb-1">Mouse TG4</h6>
+              <p class="mb-0 text-muted">12000 dpi, peso 50g</p>
+              <a href="#" class="text-danger small">Eliminar</a>
+            </div>
+          </div>
+          <div class="text-end">
+            <div class="d-flex align-items-center justify-content-end mb-2">
+              <button class="btn btn-outline-secondary btn-sm">−</button>
+              <span class="mx-2">1</span>
+              <button class="btn btn-outline-secondary btn-sm">+</button>
+            </div>
+            <p class="fw-bold mb-0 text-success">S/ 49.00</p>
+          </div>
+        </div>
+          <div class="card mb-3 card-producto p-3 d-flex flex-row align-items-center justify-content-between">
+          <div class="d-flex align-items-center">
+            <img src="/img/teclado.jpg" class="me-3" alt="Producto">
+            <div>
+              <h6 class="fw-bold mb-1">Teclado Redragon Kumara 552</h6>
+              <p class="mb-0 text-muted"> Color: Negro, RGB: SI, </p>
+              <a href="#" class="text-danger small">Eliminar</a>
+            </div>
+          </div>
+          <div class="text-end">
+            <div class="d-flex align-items-center justify-content-end mb-2">
+              <button class="btn btn-outline-secondary btn-sm">−</button>
+              <span class="mx-2">1</span>
+              <button class="btn btn-outline-secondary btn-sm">+</button>
+            </div>
+            <p class="fw-bold mb-0 text-success">S/ 149.00</p>
+          </div>
+        </div>
+
+        <!-- Copia de producto (ejemplo de varios) -->
+        <div class="card mb-3 card-producto p-3 d-flex flex-row align-items-center justify-content-between">
+          <div class="d-flex align-items-center">
+            <img src="/img/audifono.jpg" class="me-3" alt="Producto">
+            <div>
+              <h6 class="fw-bold mb-1">Auriculares Inalámbricos JBL Tune 510BT</h6>
+              <p class="mb-0 text-muted">Bluetooth, batería de 40 horas</p>
+              <a href="#" class="text-danger small">Eliminar</a>
+            </div>
+          </div>
+          <div class="text-end">
+            <div class="d-flex align-items-center justify-content-end mb-2">
+              <button class="btn btn-outline-secondary btn-sm">−</button>
+              <span class="mx-2">1</span>
+              <button class="btn btn-outline-secondary btn-sm">+</button>
+            </div>
+            <p class="fw-bold mb-0 text-success">S/ 249.00</p>
+          </div>
+        </div>
+      </div>
+      
+
+      <!-- Resumen de compra -->
+      <div class="col-lg-4">
+        <div class="resumen-compra shadow-sm">
+          <h5 class="fw-bold">Resumen de compra</h5>
+          <div class="d-flex justify-content-between mt-3">
+            <span>Productos</span>
+            <span>S/ 1,496.00</span>
+          </div>
+          <div class="d-flex justify-content-between">
+            <span>Gastos de entrega</span>
+            <span>S/0</span>
+          </div>
+          <hr>
+          <div class="d-flex justify-content-between fw-bold fs-5">
+            <span>Total</span>
+            <span>S/ 1,496.0</span>
+          </div>
+         <a th:href="@{/pago}" class="btn btn-danger w-100 mt-3">Ir a Pagar</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  </main>
+  <app-footer></app-footer>
