--- a/src/styles.css
+++ b/src/styles.css
@@ -21,3 +21,7 @@
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
+    nav, app-navbar {
+  position: relative;
+  z-index: 9999;
+}
