--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
+<head>
+    <script src="https://kit.fontawesome.com/da157044bb.js" crossorigin="anonymous"></script>
+</head>
 
 <router-outlet></router-outlet>
