Refactor navigation and routing in components
- Removed unused <head> section from app.component.html.
- Updated "Ir a Pagar" link in carrito.component.html to use Angular routing.
- Implemented goToPago method in carrito.component.ts for navigation.
- Changed login form to use routerLink in login.component.html.
- Added RouterLink and RouterLinkActive imports in login.component.ts.
- Updated "Finalizar compra" button in pago.component.html to use routerLink.
- Included RouterLink and RouterLinkActive in pago.component.ts imports.

--- a/src/app/paginas/carrito/carrito.component.html
+++ b/src/app/paginas/carrito/carrito.component.html
@@ -102,7 +102,7 @@
             <span>Total</span>
             <span>S/ 1,496.0</span>
           </div>
-         <a th:href="@{/pago}" class="btn btn-danger w-100 mt-3">Ir a Pagar</a>
+         <a href="#" (click)="goToPago($event)" class="btn btn-danger w-100 mt-3">Ir a Pagar</a>
         </div>
       </div>
     </div>
