--- a/src/app/paginas/login/login.component.html
+++ b/src/app/paginas/login/login.component.html
@@ -17,7 +17,7 @@
     <h2 class="text-3xl font-bold text-center mt-4 mb-6">Bienvenido a <span class="text-purple-400">OSCssA</span></h2>
 
     <!-- Formulario -->
-    <form action="/sesion" method="POST" class="space-y-4">
+    <div  class="space-y-4">
       <!-- Usuario -->
       <div>
         <label class="block text-sm text-gray-200 mb-2">Usuario:</label>
@@ -58,10 +58,14 @@
       </div>
 
       <!-- Botón LOGIN -->
-      <button  class="btn-animate w-full py-2 rounded-lg text-white font-semibold text-center block" type="submit">
-        LOGIN
-      </button>
-    </form>
+      <ul>
+        <li>
+          <a routerLink="/inicioadmin" class="btn-animate w-full py-2 rounded-lg text-white font-semibold text-center block">
+            LOGIN
+          </a>
+        </li>
+      </ul>
+    </div>
 
     <!-- Redes sociales -->
 
