--- a/src/app/paginas/pago/pago.component.html
+++ b/src/app/paginas/pago/pago.component.html
@@ -146,7 +146,7 @@
           <span>S/ 1,536.90</span>
         </div>
 
-        <button class="btn btn-danger w-100 mt-3">Finalizar compra</button>
+        <ul><li><a routerLink="" class="btn btn-danger w-100 mt-3">Finalizar compra</a></li></ul>
       </div>
     </div>
   </div>
