Agrege un nuevo navbar Admin , solo falta colocarlo en InicioAdmin

--- a/src/app/paginas/login/login.component.html
+++ b/src/app/paginas/login/login.component.html
@@ -14,7 +14,7 @@
     </div>
 
     <!-- Título -->
-    <h2 class="text-3xl font-bold text-center mt-4 mb-6">Bienvenido a <span class="text-purple-400">OSCssA</span></h2>
+    <h2 class="text-3xl font-bold text-center mt-4 mb-6">Bienvenido a <span class="text-purple-400">GameCenter</span></h2>
 
     <!-- Formulario -->
     <div  class="space-y-4">
