--- a/src/app/paginas/login/login.component.html
+++ b/src/app/paginas/login/login.component.html
@@ -45,7 +45,7 @@
 
       <!-- Contraseña -->
       <div>
-        <label class="block text-sm text-gray-200 mb-2">Contraseña:</label>
+        <label class="block text-sm text-gray-200 mb-2">Contraseñas:</label>
         <div class="relative">
           <input 
             [type]="mostrarPassword ? 'text' : 'password'" 
